# TortoiseGit-RevisionGraph-CrossPaltform

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: build.yml
LICENSES/: TortoiseSVN-Icon-License.txt
assets/: assets.qrc
src/: gitgraph.cpp  gitgraph.h  graphview.cpp  graphview.h  main.cpp  mainwindow.cpp  mainwindow.h
